fix: background padding on mobile
Took 2 minutes

--- a/css/style.css
+++ b/css/style.css
@@ -41,7 +41,6 @@ body {
 }
 
 .main-bg-overlay {
-    padding: 7px 0 7px 0;
     width: 100%;
     height: 100%;
     z-index: -1;
@@ -330,6 +329,10 @@ a[href="#"] {
 @media screen and (min-width: 1920px) {
     .main-bg {
         background-image: url(../img/bgImage_horizontal.jpg);
+    }
+
+    .main-bg-overlay {
+        padding: 7px 0 7px 0;
     }
 
     .page-wrapper {
